# libmpv-rs

./: Cargo.toml  build.rs
examples/: opengl.rs
libmpv-sys/: Cargo.toml  build.rs  pregenerated_bindings.rs
src/: mpv.rs
src/mpv/: events.rs  render.rs
