# Copyright (C) 2016  ParadoxSpiral
#
# This file is part of mpv-rs.
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
[workspace]
members = ["libmpv-sys"]

[package]
name = "libmpv"
version = "3.0.5"
edition = "2018"
authors = ["ParadoxSpiral <paradoxspiral@riseup.net>"]
license = "LGPL-2.1"
build = "build.rs"
readme = "README.md"
description = "Libmpv abstraction that's easy to use and can play next to all codecs and containers"
repository = "https://github.com/ParadoxSpiral/libmpv-rs"
keywords = ["media", "playback", "mpv", "libmpv"]


[dependencies]
libmpv-sys = { path = "libmpv-sys" }

[dev-dependencies]
crossbeam = "0.7"
glutin = "0.28"
glow = "0.11"

[features]
default = ["protocols", "render"]
protocols = [] # Enable custom protocol callbacks
render = [] # Enable custom rendering
build_libmpv = [] # build libmpv automatically, provided MPV_SOURCE is set

[badges]
travis-ci = { repository = "https://github.com/ParadoxSpiral/mpv-rs", branch = "master" }

[build-dependencies]
reqwest = { version = "0.11.14", features = ["blocking"] }
sevenz-rust = "0.2.3"